rename ask_user_to_login_to_provider and consume_credentials_and_authn_user
